Google Sign-In integration.
Sign-In results are printed on browser console.

Configuration:

In example/jvm/resources/application.conf set: config.gauth.clientId.

FossilOrigin-Name: 962fe1994f7977eb8de5d74e87b5b43fce61f0f60b8f1adfb2c9e836265d2b6c

--- a/example/jvm/resources/config.conf
+++ b/example/jvm/resources/config.conf
@@ -3,4 +3,8 @@ config {
     port = 8888
     interface = localhost
   }
+  gauth {
+    clientId = foobar
+    platformJs = "https://apis.google.com/js/platform.js"
+  }
 }
